# StreamAD

./: .gitignore  .readthedocs.yml  .travis.yml  404.html  CITATION.cff  LICENSE  MANIFEST.in  README.md  README.rst  README_zh_CN.md  _readme.py  api.html  feature.html  genindex.html  index.html  installation.html  mkdocs.yml  objects.inv  overview.html  pyproject.toml  quickstart.html  quickstart.ipynb  references.html  requirements-docs.txt  requirements.txt  search.html  searchindex.js  setup.py  sitemap.xml
.circleci/: config.yml
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
_modules/: index.html
_sources/: api.rst.txt  feature.rst.txt  index.rst.txt  installation.rst.txt  quickstart.ipynb.txt  quickstart.rst.txt
_static/: documentation_options.js
api/: streamad.evaluate.html  streamad.html  streamad.model.html  streamad.util.html
benchmark/: README.md  benchamark_results.csv  benchmark.ipynb  dataset.py  requirements_benchmark.txt
conda/: meta.yaml
docs/: .pages  Makefile  index.md  installation.html  objects.inv  py-modindex.html  requirements-docs.txt
example/: README.md  dataset_usage.ipynb  example.html  multivariate.ipynb  spot_example.html  thresholder_usage.ipynb  univariate.html  univariate.ipynb  xstream_example.html
overrides/: home.html
search/: search_index.json
source/: modules.rst  setup.rst  streamad.base.rst  streamad.model.rst  streamad.rst  streamad.util.rst
streamAD/: __init__.py
streamad/: meta.yaml
streamingAD/: version.py
test/: test.py  test_OCSVM.py  test_SR.py  test_arima.py  test_calibrator.py  (+24 more)
(+202 files in other folders)
